fix spacing

--- a/src/app/pages/events-page/events-page.component.scss
+++ b/src/app/pages/events-page/events-page.component.scss
@@ -25,7 +25,8 @@
 
 @media only screen and (max-width: 800px) {
   .custom-calendar-p {
-    margin: 1rem;
+    margin: 0;
+    padding: 0;
   }
   .legend-p {
     padding: 0 2rem;
